# c-cpp-template

./: CMakeLists.txt  main.c
package/: printer.c
